# queryverse

./: .gitignore  README.md  pyproject.toml
queryverse/: config.py  queryverse.py  settings.toml
