[tool.poetry]
name = "queryverse"
version = "0.1.0"
description = ""
authors = ["Lav Sharma <lavsharma2016@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dynaconf = "^3.2.5"
loguru = "^0.7.2"
streamlit = "^1.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
